updates for SM analysis

--- a/SM_analysis/SM_results_analysis.Rmd
+++ b/SM_analysis/SM_results_analysis.Rmd
@@ -22,11 +22,12 @@ depthIDlist<-sapply(strsplit(depthfilenamelist, "_"), "[", 2)
 
 
 #create output dataframe
-SMresults <- data.frame(matrix(ncol = 8, nrow = 0))
-colnames(SMresults) <- c("SiteID", "daysofdata", "ERdailymeanmean_gO2/m2day", "GPPdailymeanmean_gO2/m2day", "K600dailymeanmean_m/day","mean_depth_m","ERdailymeanmean_gO2/m3day","GPPdailymeanmean_gO2/m3day")
+SMresults <- data.frame(matrix(ncol = 10, nrow = 0))
+colnames(SMresults) <- c("SiteID", "daysofdata", "ERdailymeanmean_gO2/m2day", "GPPdailymeanmean_gO2/m2day", "K600dailymeanmean_m/day","mean_depth_m","ERdailymeanmean_gO2/m3day","GPPdailymeanmean_gO2/m3day","K600vsERrsq","K600vsERp")
 
 #start loop
 for(i in 1:length(IDlist)) { 
+#for(i in 1) { 
 data = read.csv(paste(folder,filenamelist[i],sep=''),header=T)
 numdays<-length(data$ER_daily_mean[!is.na(data$ER_daily_mean)])
 ERdailymeanmean<-mean(data$ER_daily_mean[!is.na(data$ER_daily_mean)])
@@ -36,16 +37,20 @@ K600dailymeanmean<-mean(data$K600_daily_mean[!is.na(data$K600_daily_mean)])
 depthfilenumber<-which(depthIDlist == IDlist[i])
 
 depthdata<-read.csv(paste(depthfolder,depthfilenamelist[depthfilenumber],sep=''),header=T)
-meandepthm<-.01*mean(depthdata$time_series_average_depth_cm,na.rm=TRUESM)
+meandepthm<-.01*mean(depthdata$time_series_average_depth_cm,na.rm=TRUE)
 
 ERdailymeanmeanm3<-ERdailymeanmean/meandepthm
 GPPdailymeanmeanm3<-GPPdailymeanmean/meandepthm
 
-SMresults[nrow(SMresults) + 1,] = c(IDlist[i], numdays,ERdailymeanmean,GPPdailymeanmean,K600dailymeanmean,meandepthm,ERdailymeanmeanm3,GPPdailymeanmeanm3)
+lmK600ER = lm(ER_daily_mean~K600_daily_mean, data = data) #Create the linear regression
+K600vsERp=summary(lmK600ER)$coefficients[2,4]
+K600vsERrsq=summary(lmK600ER)$r.squared
+
+SMresults[nrow(SMresults) + 1,] = c(IDlist[i], numdays,ERdailymeanmean,GPPdailymeanmean,K600dailymeanmean,meandepthm,ERdailymeanmeanm3,GPPdailymeanmeanm3,K600vsERrsq,K600vsERp)
 }
 
 ```
 ##write CSV outupt
 ```{r output, echo=FALSE}
-write.csv(SMresults, paste(folder,"combined_results.csv",sep=""), row.names=FALSE)
+write.csv(SMresults, paste(folder,"combined_results_2.csv",sep=""), row.names=FALSE)
 ```
