--- a/StreamMetabolizer_runs/final_results/K_estimation_final.Rmd
+++ b/StreamMetabolizer_runs/final_results/K_estimation_final.Rmd
@@ -15,12 +15,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## import depth and width data, slope data, discharge and velocity data, and combine
 ```{r message=FALSE}
-data1<-read.csv("SSS_Water_Depth_Summary.csv",skip=8)
-data2<-read.csv("SSS_RC2_NWMv2.1_flow_velocity_AugAveraged_v2.csv")
+data1<-read.csv("SSS_Water_Depth_Summary.csv",skip=8) #from this data package: https://data.ess-dive.lbl.gov/datasets/doi:10.15485/1969566
+
+data2<-read.csv("SSSflow_velocity.csv") #We obtained the streamflow and flow velocity from NOAA National Water Model (NWM) retrospective dataset using version 2.1 of NWM. The dataset provides a 42-year (February through December 2020) hourly simulation at all sampling locations (except COMID 24125857). We computed the monthly averaged streamflow and velocity in August across these simulation years.
+
 colnames(data2)<-c("Site_ID","comid","discharge","velocity")
-data3<-read.csv("Slope_NHD_for_K600_estimation.csv")
+
+data3<-read.csv("SSS_Slope.csv") #from NHDplus v2.1
+
 colnames(data3)<-c("Site_ID","slope")
 data1$Average_Depth_m=data1$Average_Depth/100
+
 data1 <-data1[order(data1$Site_ID),]
 data2 <-data2[order(data2$Site_ID),]
 data3 <-data3[order(data3$Site_ID),]
@@ -36,6 +41,8 @@ colnames(data)<-c("Site_ID","Average_Depth_m","discharge","velocity","slope")
 data$k600_md<-4725*(data$velocity*data$slope)^0.86*data$discharge^-0.14*data$Average_Depth_m^0.66
 
 output<-data.frame(data[c("Site_ID","k600_md")])
+colnames(output)=c("Site_ID","K600")
+output$K600<-round(output$K600,2)
 
-write.csv(output,file='k600.csv')
+write.csv(output,file='SSS_k600.csv',row.names = FALSE)
 ```
