--- a/v2_SSS_Ecosystem_Respiration_Data_Package_STAGING/Scripts/v2_K_estimation_final.Rmd
+++ b/v2_SSS_Ecosystem_Respiration_Data_Package_STAGING/Scripts/v2_K_estimation_final.Rmd
@@ -10,14 +10,16 @@ output: html_document
 #This script takes measured and modeled hydraulic conditions (velocity, slope, depth, and discharge) for various stream reaches and applies an empirical formula to estimate K600 from them
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+#knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # Sets working Directory to the R project
+
 ```
 
 ## import depth and width data, slope data, discharge and velocity data, and combine
 ```{r message=FALSE}
 library(tidyverse);library(dplyr)
 
-data1<-read.csv("Inputs/SSS_Water_Depth_Summary.csv",skip=8) #from this data package: https://data.ess-dive.lbl.gov/datasets/doi:10.15485/1969566
+data1<-read.csv("Inputs/v2_SSS_Water_Depth_Summary.csv",skip=8) #from this data package: https://data.ess-dive.lbl.gov/datasets/doi:10.15485/1969566
 
 data2<-read.csv("Inputs/v2_SSS_Slope_Discharge_Velocity.csv", skip = 6) #We obtained the streamflow and flow velocity from NOAA National Water Model (NWM) retrospective dataset using version 2.1 of NWM. The dataset provides a 42-year (February through December 2020) hourly simulation at all sampling locations (except COMID 24125857). We computed the monthly averaged streamflow and velocity in August across these simulation years. Slope was extracted from NHDplus v2.1
 
@@ -45,7 +47,7 @@ output$K600<-round(output$K600,2)
 
 header <- tibble::tibble(header = c('# HeaderRows_4',
                             '# HeaderRows_Format: Column_Header; Unit; InstallationMethod_ID; Instrument_Summary', 
-                            'K600; 1_per_day; N/A; Calculated using (1) depth (2) flow (3) velocity and (4) slope as inputs for the Raymond et al. (2012) table 2 equation 7. The result from that calculation is then divided by depth'))
+                            'K600; 1_per_day; N/A; Calculated using (1) depth (2) flow (3) velocity and (4) slope as inputs for the Raymond et al. (2012) table 2 equation 7. The result from that calculation is then divided by depth.'))
 
 write_csv(header, 'Inputs/v2_SSS_K600.csv', col_names = F)
 
